# storage

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
examples/: historical_candles.py
storage/binance/: history.py
